--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
   },
   "homepage": "https://github.com/gabee12/DiscJS3#readme",
   "dependencies": {
-    "discord.js": "^14.7.1"
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.14.0",
+    "discord.js": "^14.7.1",
+    "sodium-native": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^8.34.0"
