--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
     "discord.js": "^14.7.1",
-    "sodium-native": "^4.0.1"
+    "sequelize": "^6.28.2",
+    "sodium-native": "^4.0.1",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "eslint": "^8.34.0"
