--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@discordjs/opus": "^0.8.0",
     "@discordjs/voice": "^0.14.0",
     "discord.js": "^14.7.1",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "sequelize": "^6.28.2",
     "sodium-native": "^4.0.1",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
     "eslint": "^8.34.0"
